--- a/buildscript.gradle
+++ b/buildscript.gradle
@@ -41,8 +41,7 @@ rootProject.buildscript {
         maven {
             url "https://github.com/rosjava/rosjava_mvn_repo/raw/master"
         }
-        google()
-        jcenter()
+        maven{ url'http://maven.aliyun.com/nexus/content/repositories/jcenter'}
     }
     dependencies {
         classpath "org.ros.rosjava_bootstrap:gradle_plugins:[0.3,0.4)"
